♻️ Refactor: 응답 템플릿 개선 (#58)